2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	* doc/NEWS.txt: Initialize for 3.x.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 3.0.

	* build-aux/package-version: Update to 3.0.

	* doc/NEWS.txt: Document recent changes.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.

	* tools/lib/mtalpha.mk,
	* tools/lib/ptl.mk,
	* tools/lib/seqc.mk: Use `-nostdlib' to appease `cce' while `slrt'
	is being built.
	
	* tools/lib/Makefile.am (nodist_nobase_python_PYTHON): Do not
	distribute `slc_config.py', since it must be regenerated for every
	installation.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.
	
	* tools/lib/mtalpha.mk: Drop references to `libmain_seq.a' which
	does not exist any more.
	* tools/lib/ptl.mk: Also clean up `main.o'.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce new targets and variants.

	* tools/bin/cce.in: Introduce a "variant" part in the long alias.
	Drop support for 2-word aliases. Expand `seqc' to the new
	`spr'-based target, keep `seqc_o' as an alias to the old target.
	Introduce `mta', equivalent to `mtalpha'. Default `mta'/`mtalpha'
	to the `spr'-based target, keep `mta_on' (mta-old-naked) as an
	alias to the old target. New targets `mta_n' and `mta_s'
	(mta-naked, mta-seq). Assume separate library and slrt binaries
	for all targets.

	* tools/lib/mtalpha-sim/slrt.s,
	* tools/lib/host-host-seqc/slrt.c: Use the new aliases.

	* build-aux/sl.mk,
	* build-aux/slctests.mk: Build and test for the new targets.

	* tools/lib/seqc.mk,
	* tools/lib/ptl.mk,
	* tools/lib/mtalpha.mk: Build separate libraries for all targets.

	* tools/lib/empty.c: New (so that the linker does not complain
	that `libslc.a' is empty).

	* lib/gdtoa.mk: Separate list of buildable sources from other
	files.
	* lib/mtalpha.mk,
	* lib/ptl.mk,
	* lib/seqc.mk: Build separate libraries for all targets.

2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>
