@@ -1,3 +1,10 @@
+2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Fix bug with `slr -n'.
+
+	* lib/src/mtinit.c: Dereference function pointer in SEP call. Turn
+	`sys_set_main_pid' into a plain function.
+
 2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 	
 	* doc/NEWS.txt: Initialize for 3.x.
